# ios_std_alternatives

./: CMakeLists.txt  README.md
.github/workflows/: blank.yml  test-ios.yml  test-linux.yml  test-mac.yml
cmake/: ios_std_alternativesConfig.cmake.in
include/ios_std/: variant.h
include/ios_std_alternatives/: variant.h
tests/: CMakeLists.txt  ios_std_visit.cpp  tuple.cpp  variant.cpp
